Patalla de iniciio-dashboard ,  protegida

--- a/src/app/protected/dashboard/dashboard.component.html
+++ b/src/app/protected/dashboard/dashboard.component.html
@@ -1,1 +1,21 @@
-<p>dashboard works!</p>
+
+
+<h1>Dashboard</h1>
+<hr>
+
+<p>
+    Estás autenticado
+</p>
+
+<h3>
+    Bienvenido!!
+</h3>
+
+<h4>Informacion de Usuario</h4>
+
+<pre>...</pre>
+
+<button (click)="logout()"
+        class="btn-rojo">
+    Cerrar Sesion
+</button>
