--- a/src/app/protected/dashboard/dashboard.component.html
+++ b/src/app/protected/dashboard/dashboard.component.html
@@ -13,7 +13,7 @@
 
 <h4>Informacion de Usuario</h4>
 
-<pre>...</pre>
+<pre>{{usuario | json}}</pre>
 
 <button (click)="logout()"
         class="btn-rojo">
