prueba de btn danger

--- a/src/app/protected/dashboard/dashboard.component.html
+++ b/src/app/protected/dashboard/dashboard.component.html
@@ -16,6 +16,6 @@
 <pre>{{usuario | json}}</pre>
 
 <button (click)="logout()"
-        class="btn-rojo">
+        class="btn btn-danger">
     Cerrar Sesion
 </button>
